# hllib

./: .gitignore  CMakeLists.txt  README.md
HLExtract/: HLExtract.rc
HLExtract.Net/Properties/: AssemblyInfo.cs
HLLib/: HLLib.rc  Makefile  SGAFile.cpp  SGAFile.h  VPKFile.cpp  XZPFile.cpp  stdafx.h
lib/: HLLib.h
sln/vs10/HLExtract/: HLExtract.vcxproj
sln/vs10/HLLib/: HLLib.vcxproj
sln/vs17/: HLLib.sln
sln/vs17/HLExtract/: HLExtract.vcxproj
sln/vs17/HLExtract.Net/: HLExtract.Net.csproj
sln/vs17/HLLib/: HLLib.vcxproj
sln/vs9/HLExtract/: HLExtract.vcproj
sln/vs9/HLLib/: HLLib.vcproj
